# gemma-sandbox

./: .gitignore  README.md  main.py  pyproject.toml  run_agent.py  test_mcp.py  test_mcp_simple.py
one_minute/: __main__.py  agent.py  one_min_handler.py  prompt.md  tools.py
src/: local_handler.py  main.py  mcp_servers.json  online_handler.py  streamlit.py
src/core/: gemma_mcp_handler.py  mcp_client.py  mcp_config.py
src/handlers/: llm_handler.py  local_handler.py  online_handler.py
src/tools/: emergency_tools.py
