[project]
name = "gemma-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.13",
    "google-genai>=1.22.0",
    "mcp-agent>=0.1.5",
    "ollama>=0.5.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.0",
]
